# blog

./: .dockerignore  .gitignore  .prettierignore  Cargo.toml  Dockerfile  Makefile  README.md  bacon.toml  build.rs  config.yaml  docker-compose.yml  flake.nix  go.mod  go.sum  index.html  next.config.mjs  package-lock.json  package.json  shell.nix  svelte.config.js  tailwind.config.js
.ci/: master.yaml  pipeline.yaml
.github/workflows/: master.yml  react.yml
.tekton/: pipeline.yaml
.woodpecker/: build.yaml
app/: layout.tsx  page.tsx
app/about/: page.tsx
app/posts/: layout.tsx  page.tsx
app/projects/: page.tsx
app/tags/: page.tsx
archetypes/: default.md
components/: article.tsx  date.tsx  footer.tsx  header.tsx  intro.tsx  post-body.tsx  post-header.tsx  post-list.tsx  post-preview.tsx  social-icons.tsx  tag-list.tsx
content/: about.md
content/posts/: .faster-than-light-website.md  .how-I-built-my-own-router.md  .kubernetes-gitops-with-self-hosted-gitea-deployed-on-the-same-cluster.md  .my-tech-stack-for-2025.md  .nix-on-mac-computers-with-apple-silicon.md  .switching-my-self-hosted-git-servers-to-radicle.md  .why-i-rewrote-my-blog-in-rust-twice.md  alternatives-to-hashicorp-products.md  ansible-pxe-boot.md  arch-linux-installation-guide.md  automate-linux-installation-on-bare-metal-machines.md  automated-linux-installation-on-bare-metal-using-a-containerized-pxe-server.md  automating-linux-installation-on-bare-metal-with-a-containerized-pxe-server.md  backup-your-otp.md  convert-from-init-vim-to-init-lua.md  doomreading-instead-of-doomscrolling.md  dotfiles-management-for-the-lazy.md  fixing-a-weird-bug-on-the-intel-219-lm-ethernet-controller.md  fixing-the-stupid-intel-219-lm-ethernet-controller.md  how-i-deployed-my-blog-on-kubernetes.md  how-to-not-get-locked-out-by-2fa.md  introduction-to-kmonad.md  kubernetes-gitops-with-self-hosted-gitea-deployed-on-the-same-cluster.md  kubernetes-on-lxd-with-terraform-and-rancher.md  kubernetes-on-nomad.md  laptop-as-cattle.md  (+22 more)
interfaces/: post.ts
lib/: markdown.ts  post.ts
public/: CNAME  gpg  index.html  manifest.json
src/: App.css  App.js  App.test.js  App.test.tsx  App.tsx  about.rs  app.rs  components.rs  contact.rs  content.rs  error_template.rs  feed.rs  index.rs  lib.rs  main.rs  page.rs  pages.rs  posts.rs  public.rs
static/: CNAME  gpg
templates/: about.html  base.html  contact.html  index.html
tests/: test.ts
(+37 files in other folders)
