[package]
name = "blog"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
include_dir = "0.7"
maud = { version = "0.26", features = ["axum"] }
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6", features = ["compression-gzip"] }

[build-dependencies]
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }
syntect = "5.2"

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
