[package]
name = "blog"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
include_dir = "0.7"
maud = { version = "0.27", features = ["axum"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6", features = ["compression-gzip", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
pulldown-cmark = { version = "0.13", default-features = false, features = ["html"] }
syntect = "5"

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
